--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-"build": "tsx client/build.ts",
+"build": "tsx client/src/script/build.ts",
     "lint": "eslint .",
     "preview": "vite preview"
   },
